# masonry

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README  README.rst  README.txt  index.html
cmake/modules/: FindQuarter.cmake  FindTulip.cmake
data/graphs/: example.masonry  example_1.masonry  example_2.masonry
data/icons/oxygen/: index.theme  index.theme~
data/icons/oxygen/16x16/actions/: .directory
data/netfiles/: example_2.net  example_3.net  example_4.net
data/scripts/: dummy.m  example_custom_script.m  mason.m
desktop/: CMakeLists.txt  masonry.desktop
docs/matlab/: example.net  example_2.net  example_3.asv  example_4.net
icons/oxygen-minimal/: AUTHORS
src/: CMakeLists.txt  main.cpp
src/core/: pipe.h
src/gui/: configdialog.cpp  configdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  configdialog.cpp  configdialog.h  configdialog.ui
src/gui/graph/: arrowitem.cpp  arrowitem.h  directededgeitem.cpp  directededgeitem.h  graphitem.cpp  graphitem.h  graphscene.cpp  graphscene.h  graphview.cpp  graphview.h  layeritem.cpp  layeritem.h  nodeitem.cpp  nodeitem.h  receiveritem.cpp  receiveritem.h  transmitteritem.cpp  transmitteritem.h
src/gui/graph/items/: arrowitem.cpp  arrowitem.h  directededgeitem.cpp  directededgeitem.h  graphitem.cpp  graphitem.h  layeritem.cpp  layeritem.h  nodeitem.cpp  nodeitem.h  receiveritem.cpp  transmitteritem.cpp
src/gui/graphicsview/: graphnodeitem.cpp  graphnodeitem.h  graphscene.cpp  graphscene.h  graphview.cpp  graphview.h
src/gui/widgets/: editdockwidget.cpp  editdockwidget.h  editdockwidget.ui  infodockwidget.cpp  infodockwidget.h  infodockwidget.ui  nodedetaildockwidget.cpp  nodedetaildockwidget.h  nodedetaildockwidget.ui  outputdockwidget.cpp  outputdockwidget.h  outputdockwidget.ui
src/locale/: cs_CZ.ts  de_DE.ts  fr_FR.ts
translations/: cs_CZ.ts  de_DE.ts  fr_FR.ts
